# InvoiceIQ

./: .gitignore  README.md
ai/: .gitignore  api.py  costing.json  main.py  pyproject.toml
ai/config/: settings.py
ai/core/: ai_extractor.py  excel_writer.py  logger.py  pdf_utils.py  schema_manager.py
ai/costing/: cost_manager.py  main.py  model_prices.json  price_updater.py
ai/registry/: vendor_schemas.json
backend/: .env.example  package-lock.json  package.json
backend/src/: server.js
backend/src/config/: db.js
backend/src/controllers/: authController.js  costingController.js  dashboardController.js  historyController.js  invoiceController.js
backend/src/middleware/: authMiddleware.js  errorMiddleware.js  uploadMiddleware.js
backend/src/models/: Invoice.js
backend/src/routes/: costingRoutes.js  dashboardRoutes.js  invoiceRoutes.js
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: BackgroundDecor.jsx  BatchGroup.jsx  HeaderBar.jsx  Pagination.jsx  ProtectedRoute.jsx  SIdebar.jsx  StatusPill.jsx  TopBar.jsx
frontend/src/components/ui/: GlassCard.jsx  StatCard.jsx
frontend/src/context/: AuthProvider.jsx  ThemeContext.jsx  ThemeProvider.jsx  useAuth.js
frontend/src/pages/: CostAnalysis.jsx  Dashboard.jsx  History.jsx  Home.jsx  Login.jsx  Signup.jsx
frontend/src/services/: api.js
